# simple-opencv-qt-app

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Process/: process.cpp  process.h
VideoCapture/: videoCapture.cpp  videoCapture.h
cmake/: config.h.cmake
